# Kaitou

./: .gitignore  CREDITS  CREDITS.md  README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build-action.yml  build-ci.yml  build-paddle.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/paddle/: ppocrv5_det.nb
app/src/main/assets/sudachi/: char.def  sudachi.json
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  paddle-helper.cpp
app/src/main/java/com/farhannz/kaitou/: .gitignore  MainActivity.kt  MainApplication.kt  OverlayHostActivity.kt  OverlayService.kt  ScreenshotService.kt  TransparentOverlay.kt
app/src/main/java/com/farhannz/kaitou/bridges/: OCR.kt
app/src/main/java/com/farhannz/kaitou/data/dao/: Dict.kt  Entry.kt  JmDict.kt
app/src/main/java/com/farhannz/kaitou/data/models/: Dict.kt  JMDict.kt  OCR.kt
app/src/main/java/com/farhannz/kaitou/data/room/: JMDict.kt
app/src/main/java/com/farhannz/kaitou/domain/: Dictionary.kt  JMDict.kt  OcrEngine.kt  Onnxruntime.kt  Tokenizer.kt
app/src/main/java/com/farhannz/kaitou/helpers/: DatabaseManager.kt  InflectionRules.kt  JMDictManager.kt  Log.kt  Notification.kt  PermissionManager.kt  Screenshot.kt  SudachiManager.kt  TokenHelper.kt  TokenManager.kt  TokenMerger.kt  TransformerManager.kt
app/src/main/java/com/farhannz/kaitou/impl/: HuggingFaceTokenizer.kt  JMDict.kt  Onnxruntime.kt  PaddleOcrEngine.kt
app/src/main/java/com/farhannz/kaitou/impl/paddle/: CTCLabelDecoder.kt  DBPostProcess.kt  Pipeline.kt  Predictor.kt  PredictorUtils.kt
app/src/main/java/com/farhannz/kaitou/paddle/: CTCLabelDecoder.kt  DBPostProcess.kt  Pipeline.kt  Predictor.kt  PredictorUtils.kt  PredictorUtilsNew.kt
app/src/main/java/com/farhannz/kaitou/presentation/components/: FloatingButton.kt  OCRScreen.kt  PopupDict.kt
app/src/main/java/com/farhannz/kaitou/presentation/ocr/: PopupScreen.kt  PopupState.kt  (+1 more)
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: ic_launcher_background.xml  themes.xml
app/src/test/java/com/farhannz/kaitou/: OCRTest.kt  Utils.kt
tools/: jmdict-to-sqlite.py
(+9 files in other folders)
